tests/expectations/parser/program/hex_eof.out
Error [EPAR0370005]: expected ';' -- found '}'
    --> test:3:33
     |
   3 |     function main() { let a = 0x}
     |                                 ^
Error [EPAR0370003]: unexpected EOF
    --> test:4:1
     |
